# Oak

./: .gitignore  .gitmodules  CMakeLists.txt  dependencies.lua  premake5.lua
Oak/: CMakeLists.txt  premake5.lua
Oak/Source/: Oak.hpp  oakpch.cpp  oakpch.hpp
Oak/Source/Core/: Application.cpp  Application.hpp  Entrypoint.hpp  Log.cpp
Oak/Source/Oak/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.hpp  Buffer.hpp  EntryPoint.hpp  Entrypoint.hpp  FileSystem.cpp  FileSystem.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  PlatformDetection.hpp  Timer.hpp  Timestep.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp
Oak/Source/Oak/Debug/: Instrumentor.hpp
Oak/Source/Oak/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Oak/Source/Oak/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Oak/Source/Oak/Math/: Math.cpp  Math.hpp
Oak/Source/Oak/Physics/: Physics2D.hpp
Oak/Source/Oak/Project/: Project.cpp  Project.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp
Oak/Source/Oak/Renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  MSDFData.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.cpp  Shader.cpp  (+16 more)
Oak/Thridparty/glad/: premake5.lua
Oak/Thridparty/stb_image/: stb_image.cpp
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/Source/: ExampleLayer.cpp  ExampleLayer.hpp  Sandbox2D.cpp  Sandbox2D.hpp  SandboxApplication.cpp
(+95 files in other folders)
